load-tests/route_guide_unary/deployment/deployment-patch.yaml
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: no-name
spec:
  template:
    spec:
      containers:
      - name: "route-guide-unary-deployment"
        imagePullPolicy: Always
